# VLSIHUB

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agents/: __init__.py  router.py  verifier.py
rag/: __init__.py  answer_generator.py  data_ingestion.py  embedder.py  main.py  retriever.py
tests/: conftest.py  test_data_ingestion.py  test_router.py
utils/: __init__.py  config.py  logger.py
